fix overflow

--- a/src/app/common/swiper/swiper.component.scss
+++ b/src/app/common/swiper/swiper.component.scss
@@ -60,5 +60,5 @@ a.swiper-link:hover {
 }
 
 .swiper-container {
-  overflow: visible !important;
+  overflow-y: visible !important;
 }
